[package]
name = "ee-tools"
version = "1.1.0"
authors = ["Gabriel DiFiore <difioregabe@gmail.com>"]
homepage = "https://github.com/gdifiore/EE-tools"
repository = "https://github.com/gdifiore/EE-tools"
edition = "2018"

[dependencies]
clap = "2.33.1"
statrs = "0.16.0"
libmath = "0.2.1"
itertools = "0.10.5"
plotlib = "0.5.1"
chrono = "0.4.11"
special-fun = "0.2.0"